# osl-agent-sentinel

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: cd.yml  ci.yml  codeql.yml  release.yml  security.yml
benchmarks/: README.md  test_pipeline_bench.py
config/: sentinel.yaml
config/dlp/: default.yaml
config/policies/: default.yaml
config/tenants/: default.yaml
config/tools/: default.yaml
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml  prometheus.yml
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  OWASP-MAPPING.md  ROADMAP.md  TESTING.md  THREAT-MODEL.md
examples/: README.md  embedded_sdk.py  mcp_gateway.py
scripts/: dev_setup.sh  gen_keys.py
sentinel-engine/: Cargo.toml  README.md
sentinel-engine/benches/: decision.rs
sentinel-engine/src/: engine.rs  errors.rs  lib.rs  py.rs  rings.rs  signing.rs
src/sentinel/: __init__.py  bootstrap.py  cli.py  client.py
src/sentinel/adapters/: __init__.py  aws_apigw.py  envoy.py  kong.py
src/sentinel/api/: __init__.py  app.py  dependencies.py
src/sentinel/api/middleware/: __init__.py  auth.py  rate_limit.py  request_id.py
src/sentinel/api/routes/: approvals.py  audit.py  evaluate.py  health.py  identities.py  policies.py
src/sentinel/classifiers/: __init__.py  anomaly_detector.py  injection_detector.py  intent_classifier.py  tool_validator.py
src/sentinel/comms/: __init__.py  iatp.py
src/sentinel/core/: __init__.py  approval.py  cache.py  circuit_breaker.py  interceptor.py  pipeline.py  policy_engine.py
src/sentinel/dlp/: __init__.py  scanner.py
src/sentinel/gateway/: __init__.py  mcp_gateway.py  mcp_validators.py  sandbox.py
src/sentinel/identity/: __init__.py  resolver.py  signing.py  trust_scorer.py
src/sentinel/models/: __init__.py  action.py  audit.py  decision.py  identity.py  policy.py
src/sentinel/observability/: __init__.py  metrics.py  siem_exporter.py  telemetry.py
src/sentinel/policy_pac/: __init__.py  loader.py
src/sentinel/redteam/: __init__.py  __main__.py  harness.py
src/sentinel/resilience/: safe_mode.py
src/sentinel/static_analysis/: guard_checker.py
src/sentinel/tenancy/: __init__.py  manager.py
src/sentinel/utils/: __init__.py  canonical.py  crypto.py  errors.py  logging.py  timing.py
src/sentinel/verification/: __init__.py  cmvk.py
tests/: conftest.py
tests/chaos/: test_fail_closed.py
tests/e2e/: test_gateway.py
tests/fuzz/: test_canonical_property.py
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_classifiers.py  test_guard_checker.py  test_mcp_validators.py  test_policy_engine.py  test_safe_mode.py  test_signing.py  test_trust_scorer.py
