[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osl-agent-sentinel"
version = "0.1.0"
description = "Autonomous AI agent runtime security layer — OWASP Agentic AI Top 10 enforcement, policy engine, behavioral governance, MCP gateway, and SIEM-grade observability."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "OpalSageLabs", email = "engineering@opalsagelabs.click" }]
keywords = [
    "ai-security",
    "agent-security",
    "owasp",
    "agentic-ai",
    "policy-engine",
    "runtime-security",
    "mcp",
    "llm-security",
    "agent-governance",
    "siem",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "anyio>=4.2",
    "structlog>=24.1",
    "orjson>=3.9",
    "cryptography>=42.0",
    "pyjwt[crypto]>=2.8",
    "did-resolver>=0.3",
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-httpx>=0.45b0",
    "redis>=5.0",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.7",
    "tenacity>=8.2",
    "limits>=3.10",
    "rapidfuzz>=3.6",
    "regex>=2024.4",
    "tldextract>=5.1",
    "merkly>=1.0",
    "msgpack>=1.0",
    "aiokafka>=0.10",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "black>=24.3",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "ipython>=8.22",
    "types-pyyaml",
    "types-redis",
]
test = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "pytest-randomly>=3.15",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.99",
    "respx>=0.21",
    "freezegun>=1.4",
    "coverage[toml]>=7.4",
    "factory-boy>=3.3",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-mermaid2-plugin>=1.1",
]
security = [
    "bandit>=1.7",
    "pip-audit>=2.7",
    "cyclonedx-bom>=4.4",
    "semgrep>=1.71",
]

[project.scripts]
sentinel = "sentinel.cli:main"

[project.urls]
Homepage      = "https://github.com/OpalClaw/osl-agent-sentinel"
Documentation = "https://github.com/OpalClaw/osl-agent-sentinel/tree/main/docs"
Repository    = "https://github.com/OpalClaw/osl-agent-sentinel"
Issues        = "https://github.com/OpalClaw/osl-agent-sentinel/issues"
Changelog     = "https://github.com/OpalClaw/osl-agent-sentinel/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["sentinel*"]

[tool.setuptools.package-data]
sentinel = ["py.typed", "policy_pac/bundles/*.yaml", "policy_pac/bundles/*.rego"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "C4", "SIM", "PL", "RUF", "ASYNC", "PT", "PERF"]
ignore = ["S101", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "PLR2004"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
disallow_untyped_decorators = true
implicit_reexport = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["merkly.*", "tldextract.*", "did_resolver.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "unit: unit tests (fast, no I/O)",
    "integration: integration tests (require services)",
    "e2e: end-to-end tests",
    "redteam: adversarial red-team tests",
    "slow: tests that take longer than 1s",
]

[tool.coverage.run]
branch = true
source = ["sentinel"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
