[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osl-agent-sentinel"
version = "0.1.0"
description = "Autonomous AI agent runtime security layer — OWASP Agentic AI Top 10 enforcement, policy engine, behavioral governance, MCP gateway, and SIEM-grade observability for production agent systems."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpalSageLabs", email = "opalclaw@users.noreply.github.com" },
]
keywords = [
  "ai-security", "agentic-ai", "owasp", "llm-security", "mcp",
  "policy-engine", "zero-trust", "runtime-security", "prompt-injection",
  "dlp", "siem", "ai-governance", "ai-safety", "ai-agents",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

# Runtime dependencies — every entry is imported by the package.
dependencies = [
  "pydantic>=2.5,<3",
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.27,<1",
  "starlette>=0.36,<2",
  "httpx>=0.27,<1",
  "anyio>=4.2,<5",
  "structlog>=24.1,<26",
  "orjson>=3.9,<4",
  "cryptography>=42.0,<46",
  "prometheus-client>=0.20,<1",
  "pyyaml>=6.0,<7",
  "typer>=0.12,<1",
  "jsonschema>=4.21,<5",
]

[project.optional-dependencies]
# OpenTelemetry is optional: control planes that don't export traces shouldn't pay the install cost.
otel = [
  "opentelemetry-api>=1.24",
  "opentelemetry-sdk>=1.24",
  "opentelemetry-exporter-otlp-proto-grpc>=1.24",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
  "opentelemetry-instrumentation-httpx>=0.45b0",
]
# SIEM HTTP transports.
siem = ["aiohttp>=3.9"]
# Developer tooling.
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "pytest-benchmark>=4.0",
  "hypothesis>=6.100",
  "ruff>=0.5",
  "black>=24.4",
  "mypy>=1.10",
  "bandit[toml]>=1.7",
  "pip-audit>=2.7",
  "types-pyyaml>=6.0",
  "types-jsonschema>=4.21",
]
all = [
  "osl-agent-sentinel[otel,siem,dev]",
]

[project.urls]
Homepage = "https://github.com/OpalClaw/osl-agent-sentinel"
Documentation = "https://github.com/OpalClaw/osl-agent-sentinel/tree/main/docs"
Repository = "https://github.com/OpalClaw/osl-agent-sentinel.git"
Issues = "https://github.com/OpalClaw/osl-agent-sentinel/issues"
Changelog = "https://github.com/OpalClaw/osl-agent-sentinel/blob/main/CHANGELOG.md"

[project.scripts]
sentinel = "sentinel.cli:main"

# -----------------------------------------------------------------------------
# Packaging
# -----------------------------------------------------------------------------
[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["sentinel*"]

[tool.setuptools.package-data]
sentinel = ["py.typed"]

# -----------------------------------------------------------------------------
# Ruff (lint + import sort)
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W", "I", "B", "UP", "S", "N", "C4", "PIE", "PT",
  "RET", "SIM", "TCH", "ARG", "PL", "RUF",
]
ignore = [
  "PLR0913",  # too many arguments — pipeline composition needs them
  "PLR0912",  # too many branches — explicit policy logic is clearer
  "PLR0915",  # too many statements — pipeline is intentionally explicit
  "PLR2004",  # magic values — frequent in tests
  "S101",     # asserts allowed in tests
  "S104",     # binding 0.0.0.0 is intentional for the server
  "S105",     # hard-coded password — false positives on token names
  "S106",
  "B008",     # Depends() / typer.Option() in defaults is the framework pattern
  "PLW0603",  # global state install for API singleton
  "TRY003",   # message length in exceptions
  "PLC0415",  # lazy / inline imports for optional deps
  "SIM102",   # nested ifs sometimes clearer for policy logic
  "ARG002",   # unused method args common for protocol implementations
  "PLR0911",  # multiple returns are fine for decision trees
  "PLW2901",  # loop variable reassignment is sometimes intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "ARG", "PLR2004"]
"examples/**/*.py" = ["S101", "ARG"]
"scripts/**/*.py" = ["S101", "ARG"]

[tool.ruff.lint.isort]
known-first-party = ["sentinel"]

# -----------------------------------------------------------------------------
# Black
# -----------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311", "py312"]

# -----------------------------------------------------------------------------
# Mypy (strict)
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_decorators = true
plugins = ["pydantic.mypy"]
files = ["src/sentinel"]

[[tool.mypy.overrides]]
module = [
  "prometheus_client.*",
  "jsonschema.*",
  "yaml.*",
  "structlog.*",
  "opentelemetry.*",
  "httpx.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "sentinel.api.*",
  "sentinel.api.routes.*",
  "sentinel.api.middleware.*",
  "sentinel.cli",
  "sentinel.bootstrap",
  "sentinel.client",
  "sentinel.observability.*",
  "sentinel.core.interceptor",
  "sentinel.adapters.*",
]
disallow_untyped_decorators = false
disallow_untyped_defs = false
warn_unused_ignores = false
warn_return_any = false
no_implicit_optional = false
check_untyped_defs = false

# Relax strictness for ASGI middleware shims and CLI / API surface modules
# where FastAPI / Starlette and Typer provide

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--import-mode=importlib",
]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "slow: tests that take more than a second to run",
  "chaos: chaos-engineering scenarios",
  "redteam: adversarial corpus tests",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:pydantic.*",
  "ignore::DeprecationWarning:starlette.*",
]

# -----------------------------------------------------------------------------
# Coverage
# -----------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["src/sentinel"]
omit = ["src/sentinel/cli.py", "src/sentinel/bootstrap.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

# -----------------------------------------------------------------------------
# Bandit
# -----------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", "examples", "benchmarks", "scripts", "sentinel-engine"]
skips = ["B101"]  # assert_used — allowed in non-test code paths we mark explicitly
